<resources>
    <string name="app_name">Get It Done</string>
    <string name="get_it_done">Get It Done</string>
    <string name="stepwise_task">Stepwise Task</string>
    <string name="a_framework_for_tasks_that_may_benefit_from_being_partitioned_into_discrete_steps_until_completion">A framework for tasks that may benefit from being partitioned into discrete steps until completion.</string>
    <string name="repeat_task">Repeat Task</string>
    <string name="a_framework_for_tasks_that_may_have_sub_tasks_requiring_loose_repetition_such_as_studying_for_an_indeterminate_amount_of_time">A framework for tasks that may have sub-tasks requiring loose repetition, such as studying for an indeterminate amount of time.</string>
    <string name="complex_task">Complex Task</string>
    <string name="a_framework_for_tasks_with_a_large_amount_of_nested_sub_tasks_each_with_their_own_complex_and_flexible_workflow">A framework for tasks with a large amount of nested sub-tasks, each with their own complex and flexible workflow.</string>
    <string name="favorites_dropdown_button">favorites dropdown button</string>
    <string name="stepwise_task_structure">Stepwise task structure</string>
    <string name="repeat_task_structure">Repeat task structure</string>
    <string name="complex_task_structure">Complex task structure</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="sign_up">Sign Up</string>
    <string name="default_profile_image">Default profile image</string>
    <string name="tomato_craig_s_profile_picture">Tomato Craig\'s profile picture</string>
    <string name="craig_savage">Craig Savage</string>
    <string name="tomato_craig_username">\@tomatocraig</string>
    <string name="default_password">********</string>
    <string name="tomato_craig_g_mail_com">tomatocraig@gmail.com</string>
    <string name="swipe_up">Swipe up</string>
    <string name="calendar">Calendar</string>
    <string name="submit">Submit</string>
    <string name="login">LogIn</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="click_to_change">Click to change</string>
    <string name="click_to_add_image">Click to add Image</string>
    <string name="enter_new_name">Enter new Name</string>
    <string name="enter_new_username">Enter new Username</string>
    <string name="enter_new_email">Enter new Email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="click_to_edit_profile">Click to edit profile</string>
    <string-array name="sortBy">
        <item name="sortDate">Date</item>
        <item name="sortName">Name</item>
        <item name="sortCata">Category</item>
    </string-array>
</resources>
