<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <TextView
        android:id="@+id/textView51154"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/craig_savage"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView51154" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="217dp"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/click_to_edit_profile"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="110dp"
        android:backgroundTint="@color/ourOrange"
        android:onClick="openProfile"
        android:text="@string/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:contentDescription="@string/tomato_craig_s_profile_picture"
        android:onClick="openProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/tomato_craig" />

    <ImageView
        android:id="@+id/ivCalendar"
        android:layout_width="283dp"
        android:layout_height="286dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:srcCompat="@drawable/november" />

    <Button
        android:id="@+id/rightCal"
        android:layout_width="45dp"
        android:layout_height="292dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/ourOrange"
        android:onClick="rightCal"
        android:text="&gt;&gt;"
        app:layout_constraintStart_toEndOf="@+id/ivCalendar"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <Button
        android:id="@+id/leftCal"
        android:layout_width="45dp"
        android:layout_height="292dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/ourOrange"
        android:onClick="leftCal"
        android:text="&lt;&lt;"
        app:layout_constraintEnd_toStartOf="@+id/ivCalendar"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/ivSwipeUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/swipe_up"
        android:onClick="swipeUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/swipe_up" />

</androidx.constraintlayout.widget.ConstraintLayout>